added MonthlyNewsLetter Column to FamilyMember table, added functionality to it

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
@@ -21,7 +21,7 @@
 									<div class="progress">
 										<div class="progress-bar"></div>
 									</div>
-									<a class="bs-wizard-dot" href="property-type.html">1</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">1</a>
 									<div class="text-center bs-wizard-stepnum marl-55">Register</div>
 								</div>
 								<div class="col-md-4 bs-wizard-step disabled">
@@ -29,7 +29,7 @@
 									<div class="progress">
 										<div class="progress-bar"></div>
 									</div>
-									<a class="bs-wizard-dot" href="property-details.html">2</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">2</a>
 									<div class="text-center bs-wizard-stepnum">Confirm</div>
 								</div>
 
