--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -16,14 +16,14 @@
 							<div class="row bs-wizard">
 								<div class="col-md-4 bs-wizard-step complete">
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-type.html">1</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">1</a>
 									<div class="text-center bs-wizard-stepnum marl-55">Register</div>
 								</div>
 
 								<div class="col-md-4 bs-wizard-step active">
 									<!-- complete -->
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-details.html">2</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">2</a>
 									<div class="text-center bs-wizard-stepnum">Confirm</div>
 								</div>
 
