--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
@@ -15,21 +15,21 @@
 							<div class="row bs-wizard">
 								<div class="col-md-4 bs-wizard-step complete">
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-type.html">1</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">1</a>
 									<div class="text-center bs-wizard-stepnum marl-55">Register</div>
 								</div>
 
 								<div class="col-md-4 bs-wizard-step complete">
 									<!-- complete -->
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-details.html">2</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">2</a>
 									<div class="text-center bs-wizard-stepnum">Confirm</div>
 								</div>
 
 								<div class="col-md-4 bs-wizard-step active">
 									<!-- active -->
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="listing-details.html">3</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">3</a>
 									<div class="text-center bs-wizard-stepnum marr-60">Pay</div>
 								</div>
 							</div>
