--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
@@ -101,7 +101,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.Address, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
+								@Html.TextBoxFor(m => m.Address, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
 							</div>
 							<div class="col-md-6">
@@ -118,26 +118,26 @@
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.City, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.City, new { @class = "form-control" })
+								@Html.TextBoxFor(m => m.City, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.ZipCode, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control" })
+								@Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.HomePhone, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.HomePhone, new { @class = "form-control" })
+								@Html.TextBoxFor(m => m.HomePhone, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.HomePhone, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.CellPhone)
-								@Html.TextBoxFor(m => m.CellPhone, new { @class = "form-control" })
+								@Html.TextBoxFor(m => m.CellPhone, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.CellPhone, "", new { @class = "text-danger" })
 							</div>
 
