--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
 				}
 				else
 				{
-					<div class="nav-side-menu">
+					<div class="nav-side-menu" style="position: absolute">
 						<div class="menu-list">
 						<ul class="menu-content collapse out" id="menu-content">
 							<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
