--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -43,7 +43,8 @@
 							<th scope="col">Relationship</th>
 							<th scope="col">
 								Grade
-								<img id="GradeTooltip" src="~/Content/img/info-icon.png" alt="" title="Grade in school (@Model.familyMemberModel.Year)" />
+								<a href="javascript: void(0);" data-toggle="tooltip" title="Grade in school (@Model.familyMemberModel.Year)"><img id="GradeTooltip" src="~/Content/img/info-icon.png" alt="" /></a>
+								@*<img id="GradeTooltip" src="~/Content/img/info-icon.png" alt="" title="Grade in school (@Model.familyMemberModel.Year)" />*@
 							</th>
 							<th scope="col"></th>
 						</tr>
