--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12 form-group">
 				@Html.LabelFor(m => m.RetypePassword, new { @class = "requiredA" })
 				@Html.TextBoxFor(m => m.RetypePassword, new { @class = "form-control", @Name = "RetypePassword", @type = "password" })
 				@Html.ValidationMessageFor(m => m.RetypePassword, "", new { @class = "text-danger" })
