--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
@@ -135,7 +135,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-md-6 form-group">
 								@Html.LabelFor(m => m.CellPhone)
 								@Html.TextBoxFor(m => m.CellPhone, new { @class = "form-control", autocomplete = "off" })
 								@Html.ValidationMessageFor(m => m.CellPhone, "", new { @class = "text-danger" })
