--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
@@ -8,22 +8,25 @@
 <div class="login_heading">Login</div>
 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form", id = "Loginform" }))
 {
-	@Html.AntiForgeryToken()
-	@Html.ValidationSummary(true, "", new { @class = "text-danger", style = "padding-left: 194px;" })
-	<label>Email</label>
-	@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
+	<div class="form-group">
+		@Html.AntiForgeryToken()
+		@Html.ValidationSummary(true, "", new { @class = "text-danger", style = "padding-left: 194px;" })
+		<label>Email</label>
+		@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
+		@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		<label>Password @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
+		@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
 
-	@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-	<label>Password @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
-	@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+		</div>
+		<button class="btn btn-orange float-right" type="submit">Login<i class="material-icons">check_circle</i></button>
+		}
 
-	@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-	<button class="btn btn-orange float-right" type="submit">Login<i class="material-icons">check_circle</i></button>
-}
-
-@if (ViewBag.UserNotActivated != null)
-{
-	<script>
+		@if (ViewBag.UserNotActivated != null)
+		{
+			<script>
         var content = "@ViewBag.UserNotActivated";
         $.confirm({
             title: 'Alert!',
@@ -40,12 +43,12 @@
                 }
             }
         });
-	</script>
-}
+			</script>
+		}
 
-@if (ViewBag.Message != null)
-{
-	<script>
+		@if (ViewBag.Message != null)
+		{
+			<script>
         var content = "@ViewBag.Message";
         $.confirm({
             title: 'Alert!',
@@ -62,5 +65,5 @@
                 }
             }
         });
-	</script>
-}
+			</script>
+		}
