--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
@@ -60,42 +60,41 @@
 					</p>
 					<div class="row">
 						<div class="col-md-6">
-							@Html.LabelFor(m => m.FirstName, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", autocomplete = "off" })
-							@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+								@Html.LabelFor(m => m.FirstName, new { @class = "requiredA" })
+								@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", autocomplete = "off" })
+								@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+							</div>
+							<div class="col-md-6">
+								@Html.LabelFor(m => m.LastName, new { @class = "requiredA" })
+								@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocomplete = "off" })
+								@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+							</div>
 						</div>
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.LastName, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocomplete = "off" })
-							@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
-						</div>
-					</div>
 
 					<div class="row">
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
-							<div class="input-group date">
-								@Html.TextBoxFor(m => m.DOB, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "DOB", @value = "", @style = "height: 35px;", autocomplete = "off" })
-								<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+						<div class="col-md-6 form-group">
+								@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
+								<div class="input-group date mb-0">
+									@Html.TextBoxFor(m => m.DOB, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "DOB", @value = "", @style = "height: 35px;", autocomplete = "off" })
+									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+								</div>
+
+								@Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })
+								@Html.HiddenFor(m => m.DOB, new { Id = "DateValue" })
 							</div>
 
-							@Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })
-							@Html.HiddenFor(m => m.DOB, new { Id = "DateValue" })
-						</div>
+							<div class="col-md-6">
+								@Html.LabelFor(m => m.GenderData, new { @class = "requiredA" })
+								@Html.DropDownList("GenderData", new SelectList(ViewBag.Gender, "Id", "Name", ViewBag.SelectedGender), "Select", new { @class = "form-control", @style = "height: 35px;" })
+								@Html.ValidationMessageFor(m => m.GenderData, "", new { @class = "text-danger" })
+							</div>
+							<div class="col-md-6 form-group">
+								@Html.LabelFor(m => m.AgeGroupData)
+								@Html.DropDownListFor(m => m.AgeGroupData, new SelectList(ViewBag.AgeGroup, "Id", "Name", ViewBag.SelectedAgeGroup), "Select", new { @class = "form-control", @style = "height: 35px;" })
 
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.GenderData, new { @class = "requiredA" })
-							@Html.DropDownList("GenderData", new SelectList(ViewBag.Gender, "Id", "Name", ViewBag.SelectedGender), "Select", new { @class = "form-control", @style = "height: 35px;" })
-							@Html.ValidationMessageFor(m => m.GenderData, "", new { @class = "text-danger" })
-						</div>
+							</div>
 
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.AgeGroupData)					
-							@Html.DropDownListFor(m => m.AgeGroupData, new SelectList(ViewBag.AgeGroup, "Id", "Name", ViewBag.SelectedAgeGroup), "Select", new { @class = "form-control", @style = "height: 35px;" })
-							
 						</div>
-
-					</div>
 					<div class="row">
 						<div class="col-md-12">
 							<button class="btn btn-secondary float-left" id="btnCancel" type="button" onclick="window.location = '@Url.Action("Login", "Account")'">Cancel <i class="material-icons">cancel</i></button>
