--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
@@ -12,7 +12,7 @@
                 <h5 class="modal-title">Change Phone Number</h5>
                     <div class="row">
                         @Html.HiddenFor(m => m.Email, new { id = "pEmail" })
-                        <div class="col-md-12">
+                        <div class="col-md-12 form-group">
                             @Html.LabelFor(m => m.OldPhone, new { @Id = "PhoneValue" })
                             @Html.TextBoxFor(m => m.OldPhone, new { @class = "form-control", @Name = "OldPhone" })
                             @Html.ValidationMessageFor(m => m.OldPhone, "", new { @class = "text-danger" })
@@ -31,10 +31,6 @@
     </div>
 </div>
 <script>
-	$(document).ready(function () {
-		$.validator.unobtrusive.parse($("form"));
-	});
-
 	function OnSuccessChangePhone(response) {
 		if (typeof (response.Message) !== 'undefined') {
 			if (response.IsSuccess) {
