--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -89,7 +89,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						@Html.Label("Start Time", new { @class = "requiredA" })
-						<div class='input-group'>
+						<div class='input-group mb-0'>
 							@Html.TextBoxFor(m => m.StartTime, new { @class = "form-control", @type = "text", @Name = "StartTime", @style = "height: 35px;" })
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-time"></span>
@@ -99,7 +99,7 @@
 					</div>
 					<div class="col-md-4">
 						@Html.Label("End Time", new { @class = "requiredA" })
-						<div class='input-group'>
+						<div class='input-group mb-0'>
 							@Html.TextBoxFor(m => m.EndTime, new { @class = "form-control", @type = "text", @Name = "EndTime", @style = "height: 35px;" })
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-time"></span>
@@ -133,18 +133,18 @@
 
 				</div>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-4 form-group">
 						@Html.LabelFor(m => m.Other)
 						@Html.TextBoxFor(m => m.Other, new { @class = "form-control", @Name = "Other" })
 						@Html.ValidationMessageFor(m => m.Other, "", new { @class = "text-danger" })
 					</div>
-					<div class="col-md-4" id="HolidayDate">
+					<div class="col-md-4 form-group" id="HolidayDate">
 						@Html.LabelFor(m => m.HolidayDate, new { @class = "requiredA" })
-						<div class="input-group date">
+						<div class="input-group date mb-0">
 							@Html.TextBoxFor(m => m.HolidayDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "HolidayDate", @value = "", @style = "height: 35px;" })
 							<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
 						</div>
-						@Html.ValidationMessageFor(m => m.HolidayDate, "", new { @class = "text-danger" })
+						<label class="text-danger" id="Err_HolidayDate">The HolidayDate field is required</label>
 					</div>
 				</div>
 				<div class="row">
@@ -171,7 +171,7 @@
 <script>
 	$(document).ready(function () {
 		$.validator.unobtrusive.parse($("form"));
-		
+		$("#Err_HolidayDate").hide();
 		$('.datepicker').datepicker({
 			todayHighlight: true,
 			autoclose: true,
@@ -184,6 +184,7 @@
 		$("#StartTime, #EndTime").datetimepicker({
 			format: 'HH:mm'
 		});
+		
 	});
 
 	function OnSuccessEvent(response) {
@@ -197,6 +198,15 @@
 	}
 
 	function OnBeginEvent() {
+		var holidayDate = new Date($("#HolidayDate").val());
+		if (holidayDate == "Invalid Date") {
+			$("#Err_HolidayDate").show();
+			return false;
+		}
+		else {
+			$("#Err_HolidayDate").hide();
+			return true;
+		}
 		$("#btnsubmit").prop("disabled", true);
 		$("#btnCancel").prop("disabled", true);
 	}
